# ssh-browser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: lint.yml
src/: localization.rs  main.rs  ssh.rs  ui.rs
