[package]
name = "ssh-browser"
version = "0.1.0"
edition = "2021"


[dependencies]
ssh2 = "0.9.2"
egui = "0.24"
eframe = "0.24"
rfd = "0.13"
libc = "0.2.168"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
lto = true # Enable Link-Time Optimization (LTO): https://doc.rust-lang.org/rustc/codegen-options/index.html#lto
